@@ -35,12 +35,9 @@ g_signal_connect (G_OBJECT (mainWindow), "delete_event", G_CALLBACK (gtk_main_qu
 
 举例来说，当`GtkButton` 上发生了鼠标点击的动作时，默认地事件和信号的顺序如下。
 
-1. `GDK_BUTTON_PRESS` 事件产生
-2. 调用GDK 中针对该事件的回调
-3. `"button_press_event"` 信号发射
-4. 调用GTK 中针对该信号的回调
-5. `"clicked"` 信号发射
-6. 调用GTK 中针对该信号的回调
+1. `GDK_BUTTON_PRESS` 事件产生 -> 调用GDK 中针对该事件的回调
+2. `"button_press_event"` 信号发射 -> 调用GTK 中针对该信号的回调
+3. `"clicked"` 信号发射 -> 调用GTK 中针对该信号的回调
 
 那么`"delete_event"` 到底是事件还是信号？它是一个信号，但是只有在事件`GDK_DELETE` 发生后才会被发射出去，所以它也代表一个事件。
 
@@ -53,9 +50,9 @@ g_signal_connect (G_OBJECT (mainWindow), "delete_event", G_CALLBACK (gtk_main_qu
 和Qt 的信号-槽机制不同，GTK 中采用回调机制来处理信号。GTK 中为信号绑定回调的方式都通过同一个函数`g_signal_connect_data` 完成，其原形定义在头文件`gobject/gsignal.h`。
 
 ```c
-gulong
-g_signal_connect_data (gpointer instance, const gchar *detailed_signal, GCallback c_handler,
-                       gpointer data, GClosureNotify destroy_data, GConnectFlags connect_flags);
+gulong g_signal_connect_data (gpointer instance, const gchar *detailed_signal,
+                              GCallback c_handler, gpointer data,
+                              GClosureNotify destroy_data, GConnectFlags connect_flags);
 ```
 
 > 因为信号处理在Glib 而非GTK 中，所以函数名以`g_` 而非`gtk_` 开头。
@@ -80,10 +77,8 @@ g_signal_connect_data (gpointer instance, const gchar *detailed_signal, GCallbac
 `g_signal_connect_swapped` 中`swapped` 的效果如下。
 
 ```c
-void
-handler (GtkWidget *widget, gpointer data);
-void
-handlerSwapped (gpointer data, GtkWidget *widget);
+void handler (GtkWidget *widget, gpointer data);
+void handlerSwapped (gpointer data, GtkWidget *widget);
 ```
 
 > 个人觉得`g_signal_connect_swapped` 最好少用，它只会把水搅浑。
@@ -95,19 +90,17 @@ handlerSwapped (gpointer data, GtkWidget *widget);
 这两种回调之间的区别如下（假设使用`g_signal_connect` 绑定）。
 
 ```c
-void
-buttonClickedHandler (GtkWidget *button, gpointer data);
-gboolean
-keyPressEventHandler (GtkWidget *button, GdkEvent *event, gpointer data);
+void buttonClickedHandler (GtkWidget *button, gpointer data);
+gboolean keyPressEventHandler (GtkWidget *button, GdkEvent *event, gpointer data);
 ```
 
-## 回调函数之间的流程控制
+### 回调的流程
 
-### 相较默认回调
+#### 相较默认回调
 
 信号可以绑定多个回调，至于自定义回调是否先于默认回调执行，参见上节关于`g_signal_connect_after` 的说明。
 
-### 终止处理过程
+#### 终止处理过程
 
 除了增加了`GdkEvent *` 作为参数外，处理事件的回调函数还有`gboolean` 类型的返回值，这个返回值用于控制该事件处理过程是否继续。
 
@@ -118,9 +111,9 @@ keyPressEventHandler (GtkWidget *button, GdkEvent *event, gpointer data);
 | `TRUE` | 该事件已经处理完毕，不再继续调用其他和该事件绑定的回调 |
 | `FALSE` | 需要继续执行其他与该事件绑定的回调函数 |
 
-### 信号发射顺序
+#### 信号发射顺序
 
 因为GTK 先捕获事件再转化为信号，所以直接反应事件的信号在其他信号之前被发射，所以同一个`GtkWidget` 上处理事件的回调总在其他信号回调之前被执行。
 
-> 所以上一节的最后一段代码片中，假设`buttonClickedHandler` 和`keyPressEventHandler`  分别被绑定到一个`GtkButton` 的`"event"` 和`"clicked"` 信号上，如果`keyPressEventHandler` 返回`TRUE`，那么`buttonClickedHandler` 将不会被执行。
+所以上一节的最后一段代码片中，假设`buttonClickedHandler` 和`keyPressEventHandler`  分别被绑定到一个`GtkButton` 的`"event"` 和`"clicked"` 信号上，如果`keyPressEventHandler` 返回`TRUE`，那么`buttonClickedHandler` 将不会被执行。
 
