@@ -1,3 +1,7 @@
+v2016-07-25
+  * Modify post "GTK事件及信号机制"
+  * Update themes
+
 v2016-07-20
   * New post "GTK事件及信号机制"
   * Update themes
